updated info drawer column

--- a/src/map-interface/components/info-drawer/strat-column/strat-column.module.styl
+++ b/src/map-interface/components/info-drawer/strat-column/strat-column.module.styl
@@ -1,7 +1,9 @@
 .strat-column-container
   min-height: 500px
   padding: 0 1em 1em
-  --background-color: var(--panel-background-color)
+  --column-background-color: var(--panel-background-color)
+  --column-stroke-color: var(--text-color)
+  --column-note-color: var(--text-color)
 
 :global
   .timescale-container .timescale
