--- a/src/map-interface/components/info-drawer/strat-column/strat-column.module.styl
+++ b/src/map-interface/components/info-drawer/strat-column/strat-column.module.styl
@@ -9,3 +9,7 @@
   .timescale-container .timescale
     width: calc(6em + 6px)
     --timescale-level-size: 1.5em
+
+.strat-column-panel h3
+  text-overflow: ellipsis
+  overflow: hidden
