Added a basic development map route

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -54,6 +54,7 @@ body
   font-family: 'Source Sans Pro', sans-serif;
   &.bp4-dark
     color: $dark-text;
+    background-color: $dark-background;
     --text-color: $dark-text
     --text-emphasized-color: #fff
     --text-subtle-color: $gray3
