--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -32,7 +32,6 @@ This stylesheet the overall application page layout.
   &.map-is-global .globe-control
     display: block
 
-
 .main-ui
   flex 1
   position: relative
@@ -40,6 +39,9 @@ This stylesheet the overall application page layout.
   flex-direction: column
   max-height 100%
   height: 100%
+
+.panel-card
+  padding: 10px
 
 .context-stack
   display: flex
@@ -74,7 +76,9 @@ This stylesheet the overall application page layout.
 
 .searchbar-holder
   margin-bottom 0.5em
-    
+
+.map-dev-page .detail-stack
+  margin-left: -30em
 
 
 // Menu
