Updated dev map

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -42,6 +42,8 @@ This stylesheet the overall application page layout.
 
 .panel-card
   padding: 10px
+  >:last-child
+    margin-bottom: 0
 
 .context-stack
   display: flex
