--- a/src/map-interface/components/searchbar.styl
+++ b/src/map-interface/components/searchbar.styl
@@ -65,3 +65,19 @@
       &:last-child
         margin-right 0 
 
+.status-tongue {
+  background-color: var(--panel-background-color);
+  margin: 5px
+  margin-top: -12px;
+  padding: 0
+  padding-top: 12px
+}
+
+@media screen and (max-width: 768px) {
+  .status-tongue{
+    max-width: 100vw;
+    margin: 0;
+    border-radius: 0;
+    margin-top: -3px;
+  }
+}
