Added a query panel

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -79,9 +79,13 @@ This stylesheet the overall application page layout.
 .searchbar-holder
   margin-bottom 0.5em
 
-.map-dev-page .detail-stack
-  margin-left: -30em
+.map-dev-page
+  flex-direction: row
+  .detail-stack
+    width: 24em
 
+.right-panel
+  width: 24em
 
 // Menu
 .buttons
