Updated dev map viewer

--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -59,6 +59,7 @@
   flex-direction row
   align-items: center
   gap: 0.5em;
+  border-bottom: 1px solid var(--panel-rule-color)
   .spacer
     flex-grow 1
   .left-icon
