--- a/src/dev-map/main.module.styl
+++ b/src/dev-map/main.module.styl
@@ -1,5 +1,6 @@
 .feature-panel
   position: relative
+  overflow-x: hidden
 
 .key-value
   display: inline-block
@@ -27,6 +28,9 @@
 
 .feature-group
   border-bottom: 1px solid var(--panel-rule-color)
-  padding: 0 1em 0.5em
+  padding: 0 1em
+  margin-left: -1em
+  margin-right: -1em
+  margin-bottom: 0.5em
   &:last-child
     border-bottom: none
