Seems to do a good job with raster layers

--- a/src/dev-map/main.module.styl
+++ b/src/dev-map/main.module.styl
@@ -34,3 +34,10 @@
   margin-bottom: 0.5em
   &:last-child
     border-bottom: none
+
+.opacity-slider
+  margin: 0 1em 0.5em
+  :global
+    .bp4-slider-handle .bp4-slider-label
+      background-color: var(--secondary-color)
+      color: var(--text-color)
