Updated tile extent controls

--- a/src/dev-map/main.module.styl
+++ b/src/dev-map/main.module.styl
@@ -39,8 +39,8 @@
   flex-direction: row
   align-items: baseline
   padding 0 1em
-  gap 0.5em
-    
+  h3
+    margin-right: 0.5em    
 
 .opacity-slider
   margin: 0 1em 0.5em
