--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -13,6 +13,7 @@
   --accent-color: $light-gray3
   --accent-hover-color: $light-gray1
   --accent-border-color: $gray5
+  --background-color: #fff
   --panel-background-color: #fff
   --panel-secondary-background-color: #f5f8fa
   --translucent-panel-background-color: rgba(255,255,255,0.2)
@@ -60,6 +61,7 @@ body
     --text-emphasized-color: #fff
     --text-subtle-color: $gray3
     --panel-background-color: $dark-background
+    --background-color: $dark-background
     --panel-secondary-background-color: lighten($dark-background, 5%)
     --translucent-panel-background-color: alpha($dark-background, 0.6)
     --accent-color: $accent // light gray 3
@@ -482,10 +484,7 @@ td {
   height: 350px;
   margin-top: 15px;
 }
-.title {
-  margin: 0;
-  color: #000000 !important;
-}
+
 .scale-badge {
   margin-left: 0 !important;
   color: #ffffff !important;
