--- a/src/dev/column-inspector/column-inspector.module.styl
+++ b/src/dev/column-inspector/column-inspector.module.styl
@@ -2,6 +2,9 @@
   *
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
 
+  --column-background-color: var(--background-color)
+  --column-stroke-color: var(--text-color)
+
   width 100vw
   height 100vh
   display flex
@@ -19,7 +22,7 @@
     position relative
 
 .column-view
-  margin 0
+  margin 0 2em
   padding 0
   h1
     font-size 1.2em
@@ -39,7 +42,7 @@
 
 .column-map
   width: 100% 
-  height: 250px
+  aspect-ratio: 1/1
   cursor pointer
   z-index 100
   &.expanded
