Improve cross-section styles

--- a/src/map-interface/components/elevation-chart/main.module.styl
+++ b/src/map-interface/components/elevation-chart/main.module.styl
@@ -20,6 +20,12 @@
   top: 0.25em;
   right: 0.25em;
 
+.elevation-focus-text
+  fill: var(--text-color);
+
+.elevation-focus-circle
+  stroke: var(--panel-secondary-background-color);
+
 .elevation-chart-wrapper
   padding-bottom: 0px;
   :global
