Add a drop-shadow below the map

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -39,6 +39,8 @@ This stylesheet the overall application page layout.
   flex-direction: column
   max-height 100%
   height: 100%
+  box-shadow 0 0 10px 4px var(--card-shadow-color)
+
 
 .panel-card
   padding: 10px
