Color line by unit intersections

--- a/src/map-interface/components/elevation-chart/main.module.styl
+++ b/src/map-interface/components/elevation-chart/main.module.styl
@@ -42,8 +42,8 @@
 
     .line
       fill: none;
-      stroke: rgba(75,192,192,1);
-      stroke-width: 1.5px;
+      //stroke: rgba(75,192,192,1);
+      stroke-width: 3px;
 
     .tick line
       opacity: 0.13;
