Reasonable calculation of cross-section lines

--- a/src/map-interface/components/elevation-chart/main.module.styl
+++ b/src/map-interface/components/elevation-chart/main.module.styl
@@ -1,6 +1,7 @@
 .elevationChart-root
   z-index: 0 !important;
   position: relative !important;
+  height: 150px;
 
 
 .elevation-chart
@@ -8,7 +9,7 @@
   -moz-transition: 0.8s;
   transition: 0.8s;
   position: relative;
-  min-height: 100px;
+  height: 150px;
 
 .elevation-instructions
   padding: 30px;
