--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -101,7 +101,14 @@
     border-radius: 3px
     margin-bottom: 1px
 
+.recenter-button
+  :global(.bp4-icon):first-child
+    margin-left: -3px
+    margin-right: 0px
 
+.recenter-label
+  display: inline-block;
+  padding-left: 1em;
 
 @media screen and (max-width: 768px)
   .infodrawer
