--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -106,9 +106,19 @@
     margin-left: -3px
     margin-right: 0px
 
+  &.off-center
+    .recenter-label
+      display: none
+  &.out-of-padding
+    .recenter-label
+      opacity: 0.5
+
 .recenter-label
   display: inline-block;
   padding-left: 1em;
+  font-style: italic;
+  //color: var(--text-subtle-color)
+
 
 @media screen and (max-width: 768px)
   .infodrawer
