Updated position focus buttons

--- a/src/map-interface/components/elevation-chart/main.module.styl
+++ b/src/map-interface/components/elevation-chart/main.module.styl
@@ -9,16 +9,18 @@
   -moz-transition: 0.8s;
   transition: 0.8s;
   position: relative;
-  height: 150px;
+  height: 160px;
 
 .elevation-instructions
   padding: 30px;
   text-align: center;
 
-.close-button
+.control-bar
   position: absolute;
   top: 0.25em;
   right: 0.25em;
+  display: flex;
+  flex-direction: row;
 
 .elevation-focus-text
   fill: var(--text-color);
