Updated map symbol organization

--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -53,15 +53,21 @@
   // max-height: calc(100vh - 60px)
   // transition: max-height 0.5s ease-in-out 0.25s
 
-.location-panel-header
+.infodrawer-header
   padding 5px
   display flex
   flex-direction row
   align-items: center
   gap: 0.5em;
   border-bottom: 1px solid var(--panel-rule-color)
+  h1, h2, h3
+    margin-top: 0
+    margin-bottom: 0
+
   .spacer
     flex-grow 1
+
+.location-panel-header
   .left-icon
     padding 7px
 
