--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -77,6 +77,7 @@ This stylesheet the overall application page layout.
 .map-view-container
   flex-grow 1
   position relative
+  overflow: hidden
 
 .searchbar-holder
   margin-bottom 0.5em
