--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -321,6 +321,9 @@ map-control()
     top -60px
     right 10px
 
+  .detail-panel
+    border-radius: 0px
+
 /* Desktop styling is necessarily much more complicated than mobile
   to handle a two-column layout. */
 @media screen and (min-width: 768px)
