--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -94,6 +94,7 @@ body
 body, .main-container {
   height: 100%;
   width: 100%;
+  background-color: var(--background-color)
   //min-height: -webkit-fill-available;
 }
 ::-webkit-scrollbar,
