--- a/src/map-interface/paleo/main.module.styl
+++ b/src/map-interface/paleo/main.module.styl
@@ -4,21 +4,26 @@
 .broken-timescale
   display: flex
   flex-direction: row
-  &>:nth-child(2)
-    border-left: 2px solid #000
-    margin-left: -2px
+  .break
+    z-index: 5
+    border-left: 2px solid var(--text-color)
+    margin-right: -1px
+    margin-top 0.5px
+    margin-bottom: 16.5px
 
 .timescale-panel
   display: flex
   flex-direction: row
-  margin: 8px 10px
+  margin: 20px 28px 10px 18px
   gap: 8px
   position: relative
+  --timescale-cursor-color: var(--text-color)
+  --timescale-background-color: var(--background-color)
 
   .controls
     width: 150px
 
 .close-button
   position: absolute
-  top: 0
-  right: 0
+  top: -16px
+  right: -24px
