--- a/src/map-interface/components/searchbar.styl
+++ b/src/map-interface/components/searchbar.styl
@@ -57,7 +57,7 @@
     display flex
     flex-direction: row
     align-items center
-    :global(.bp4-input-group)
+    .bp4-input-group
       flex-grow 1
       cursor: text
     &>*
