--- a/src/map-interface/components/docs.module.styl
+++ b/src/map-interface/components/docs.module.styl
@@ -31,6 +31,17 @@
   float: left
   margin 0.5em 1em 1em 0
 
+.dev-tag
+  font-size 0.8em
+  font-weight 400
+  padding: 0.25em 0.5em
+  margin 0.2em 0.5em 0
+  border-radius: 4px
+  font-style italic
+  float right
+  background-color: var(--accent-secondary-color)
+  color: var(--text-subtle-color)
+
 :global
 
   .text-panel
