Got MRDS sites to work

--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -1,5 +1,8 @@
 @require "../../../styles/_common"
 
+.infodrawer-main
+  margin: 0 -1em -1em;
+
 .macrostrat-detail
   display: flex;
   align-items: center;
