Improved handling of map loading states

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -22,6 +22,14 @@ This stylesheet the overall application page layout.
   position relative
   overflow: hidden
 
+.map-view-placeholder
+  flex-grow: 1
+  position: relative
+  overflow: hidden
+  display: flex
+  flex-direction: column
+  justify-content: center
+
 .searchbar-holder
   margin-bottom 0.5em
 
