Updated map page styles

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -83,7 +83,8 @@ body
     --ui-color-accent: darken(rgb(143, 39, 138), 50%)
 
     .bp4-card, .bp4-navbar
-      box-shadow 0 0 0 1px var(--card-shadow-color)
+      box-shadow 0 0 0 1.5px var(--card-shadow-color)
+      background-color: var(--panel-background-color)
 
     .bp4-input
       &::placeholder
@@ -92,7 +93,7 @@ body
 
 .bp4-card, .bp4-navbar
   border-radius: 4px
-  background-color: var(--panel-background-color) !important
+  background-color: var(--panel-background-color)
 
 
 body, .main-container {
