--- a/src/pages/maps/@id/main.module.sass
+++ b/src/pages/maps/@id/main.module.sass
@@ -6,7 +6,7 @@ body
   width: 100vh
   height: 100vh
   margin: 0
-  --map-context-stack-width: 16em
+  //--map-context-stack-width: none
 
 .map-legend-container
   overflow-y: scroll
