Make edit panel properly resizable

--- a/src/pages/maps/@id/edit/main.module.sass
+++ b/src/pages/maps/@id/edit/main.module.sass
@@ -1,7 +1,10 @@
 body
   margin: 0
   padding: 0
-  
+
+:root
+  --map-detail-stack-width: fit-content
+
 .single-map
   width: 100vh
   height: 100vh
