Fix css styles for table scrolling

--- a/src/pages/maps/@id/edit/edit-table.module.sass
+++ b/src/pages/maps/@id/edit/edit-table.module.sass
@@ -1,19 +1,14 @@
+.table-container
+  height: 100%
+  display: flex
+  flex-direction: column
+  
 td
   text-wrap: nowrap
   background-color: #ffffff78
 
 tr:nth-child(odd) td
   background-color: #ffffff
-
-div.table-container
-  display: flex
-  flex-direction: column
-  overflow: auto
-
-div.interface
-  padding-left: 10px
-  padding-bottom: 10px
-  padding-top: 10px
 
 div.input-form
   display: flex
