--- a/src/pages/maps/@id/edit/edit-menu.module.sass
+++ b/src/pages/maps/@id/edit/edit-menu.module.sass
@@ -17,15 +17,18 @@ button.icon-button
   .icon-label
     padding-bottom: 10px
 
-div.edit-table-drawer
+.width-adjustable-panel
   transition: max-width 0.1s ease-in-out
-  overflow: scroll
   height: 100%
   display: flex
   flex-direction: row
-  padding-left: 10px
-  padding-bottom: 10px
-  padding-top: 10px
+  position: relative
+
+.width-adjustable-panel-content
+  overflow: scroll
+  height: 100%
+  flex-grow: 1
+  padding: 1em
 
 div.edit-table-wrapper
   overflow: scroll
@@ -33,8 +36,9 @@ div.edit-table-wrapper
 
 div.width-adjuster
   cursor: col-resize
-  width: 10px
-  padding: 5px
+  width: 6px
   height: 100%
+  // Not sure why this defaults to shrinking
+  flex-shrink: 0
   &:hover
     background-color: #efefef
