--- a/src/pages/maps/@id/edit/override.sass
+++ b/src/pages/maps/@id/edit/override.sass
@@ -5,3 +5,7 @@
 
 .bp4-menu
     padding: 0px
+
+// For the table column highlighting
+.final-column
+    box-shadow: inset 0 -1px 0 rgba(39, 201, 236, 0.55), inset -1px 0 0 rgba(39, 201, 236, 0.55) !important
