--- a/packages/data-sheet-test/src/main.module.sass
+++ b/packages/data-sheet-test/src/main.module.sass
@@ -1,9 +1,39 @@
-body
-  height: 100vh
-  width: 100vw
-  padding: 0
-  overflow-y: hidden
+@import "@blueprintjs/core/lib/scss/variables.scss"
   
 .main
-  margin: 2em 8em
-  
+  padding: 2em 8em
+  display: flex
+  flex-direction: column
+  position: fixed
+  width: 100vw
+  height: 100vh
+  top: 0
+  left: 0
+
+.data-sheet-container
+  flex: 1
+  position: relative
+  min-height: 0
+
+.data-sheet
+  height: 100%
+
+:global(.bp4-dark) .data-sheet :global(.bp4-table-quadrant)
+  background-color: $dark-gray1
+
+.input-container
+  padding: 0 2px !important
+  input
+    width: 100%
+    height: 100%
+    padding: 0 8px
+    z-index: 0
+    position: relative
+    border: none
+    margin: 0
+    font-size: 1em
+    pointer-events: all
+    background: transparent
+    color: $dark-gray1
+    &:focus
+      outline: none
