--- a/packages/data-sheet-test/src/main.module.sass
+++ b/packages/data-sheet-test/src/main.module.sass
@@ -41,3 +41,13 @@
   opacity: 0
   position: absolute
   width: 0
+
+.corner-drag-handle
+  position: absolute
+  bottom: 0
+  right: 0
+  width: 8px
+  height: 8px
+  background-color: $dark-gray1
+  cursor: nwse-resize
+  background-color: dodgerblue
