Updated data sheet colors components

--- a/packages/data-sheet-test/src/main.module.sass
+++ b/packages/data-sheet-test/src/main.module.sass
@@ -15,7 +15,7 @@
 :global(.bp4-dark) .data-sheet :global(.bp4-table-quadrant)
   background-color: $dark-gray1
 
-.input-container
+.input-cell
   padding: 0 2px !important
   input
     width: 100%
@@ -43,7 +43,7 @@
   width: 8px
   height: 8px
   background-color: $dark-gray1
-  cursor: nwse-resize
+  cursor: ns-resize
   background-color: dodgerblue
 
 .data-sheet-toolbar
