Made data sheet the dominant object on the page

--- a/src/pages/maps/@id/edit/main.module.sass
+++ b/src/pages/maps/@id/edit/main.module.sass
@@ -6,8 +6,8 @@ body
   --map-detail-stack-width: fit-content
 
 .single-map
-  width: 100vh
-  height: 100vh
+  flex: 1
+  height: 100%
   margin: 0
   --map-context-stack-width: 16em
 
