--- a/src/components/map-navbar/main.module.sass
+++ b/src/components/map-navbar/main.module.sass
@@ -12,3 +12,11 @@
       .map-title
         // Allow the title to wrap on hover
         overflow-x: visible
+
+.map-minimal-navbar
+  display: flex
+  flex-direction: row
+  &>.spacer
+    flex-grow: 1
+  .map-navbar
+    min-width: 0
