Fix the styles on the interval selectors

--- a/src/pages/maps/@id/edit/override.sass
+++ b/src/pages/maps/@id/edit/override.sass
@@ -1,4 +1,10 @@
 
+// For the button text in cells
+.bp4-button-text
+    overflow: hidden
+    text-overflow: ellipsis
+
+
 // Need this to get the popups in front of the sidebar
 .bp4-portal
     z-index: 101
