Add infinite scrolling

--- a/src/pages/maps/@id/edit/components/main.module.sass
+++ b/src/pages/maps/@id/edit/components/main.module.sass
@@ -6,6 +6,8 @@
   position: relative
 
 .width-adjustable-panel-content
+  display: flex
+  flex-direction: column
   overflow: scroll
   height: 100%
   flex-grow: 1
