Update long-text cells on source update

--- a/src/pages/maps/@id/edit/override.sass
+++ b/src/pages/maps/@id/edit/override.sass
@@ -3,6 +3,7 @@
 .bp4-button-text
     overflow: hidden
     text-overflow: ellipsis
+    min-height: 1rem
 
 
 // Need this to get the popups in front of the sidebar
