Update unit selection

--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -1,3 +1,4 @@
-body.bp4-dark
-  dark-mode: true
-  background-color: #141a1e
+// TODO: this file is a placeholder for when we migrate core styles to SASS
+  
+@use "@blueprintjs/colors/lib/scss/colors.scss" as colors
+  
