--- a/packages/sift/src/css/styles.css
+++ b/packages/sift/src/css/styles.css
@@ -1,10 +1,11 @@
 body {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
-html, body, .react {
+html,
+body,
+.react {
   height: 100%;
-
 }
 .hide {
   display: none;
@@ -12,7 +13,7 @@ html, body, .react {
 #header {
   width: 100%;
   display: table;
-  border-bottom: 1px solid rgba(153,0,0,0.2);
+  border-bottom: 1px solid rgba(153, 0, 0, 0.2);
   padding-bottom: 3px;
   height: 50px;
   max-width: 1200px;
@@ -23,11 +24,11 @@ html, body, .react {
   height: 100%;*/
   width: 100%;
   padding: 0;
-/*  margin-bottom: 200px;
+  /*  margin-bottom: 200px;
   position: fixed;*/
 }
 .page-content {
-/*  padding: 0 30px; */
+  /*  padding: 0 30px; */
   margin-bottom: 150px;
   max-width: 1200px;
   margin: 0 auto;
@@ -38,7 +39,8 @@ html, body, .react {
   content: "";
   display: block;
 }
-.footer, .page-content:after {
+.footer,
+.page-content:after {
   height: auto;
 }
 .header-title {
@@ -82,7 +84,7 @@ html, body, .react {
 .autocomplete-mask {
   height: 100%;
   width: 100%;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   z-index: 999999;
 }
@@ -96,12 +98,12 @@ html, body, .react {
   text-align: left;
   position: absolute;
   z-index: 9999999;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 .autocomplete-input {
   padding: 10px;
   background-color: #fff;
-  border: 1px solid #D1D1D1;
+  border: 1px solid #d1d1d1;
   border-radius: 4px;
   font-size: 14px;
   width: 100%;
@@ -112,7 +114,7 @@ html, body, .react {
   padding: 10px;
   margin-top: -5px;
   border: 1px solid #ddd;
-  box-shadow: 0px 1px 5px rgba(50,50,50,0.2);
+  box-shadow: 0px 1px 5px rgba(50, 50, 50, 0.2);
 }
 .autocomplete-result-category {
   margin-bottom: 5px;
@@ -270,7 +272,7 @@ html, body, .react {
 
 .random-column-stats {
   z-index: 10000;
-  background-color: rgba(255,255,255,0.95);
+  background-color: rgba(255, 255, 255, 0.95);
   height: inherit;
 }
 .table-cell {
@@ -284,7 +286,7 @@ html, body, .react {
   height: 100%;
   display: flex;
   flex-direction: row;
-/*  box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;
+  /*  box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;
   -webkit-box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;
   -mox-box-shadow: 0px 6px 10px -6px #aaa, 0px -6px 10px -6px #aaa;*/
   box-shadow: 0px 6px 10px -6px #aaa;
@@ -293,7 +295,7 @@ html, body, .react {
 }
 
 .map-container {
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .random-column-chart {
@@ -316,7 +318,8 @@ html, body, .react {
   color: #777;
 }
 
-.title, .title > a {
+.title,
+.title > a {
   font-weight: 200;
   font-size: 20px;
   margin-left: 15px;
@@ -329,7 +332,10 @@ html, body, .react {
   overflow: auto;
   margin: auto;
   position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   /*position: absolute;
   margin: 0 auto;
   left: 40%;
@@ -374,10 +380,10 @@ html, body, .react {
   color: #aaaaaa !important;
 }
 .chart-canvas-container {
-/*  padding-top: 48%; */
+  /*  padding-top: 48%; */
   min-width: 300px;
 
-/*  margin-left: -40px;*/
+  /*  margin-left: -40px;*/
   position: relative;
 }
 
@@ -385,7 +391,6 @@ html, body, .react {
   position: absolute;
   bottom: 0;
   width: 100%;
-
 }
 .chart-legend table {
   width: 100%;
@@ -423,7 +428,8 @@ html, body, .react {
   text-decoration: none;
 }
 
-small, .small {
+small,
+.small {
   font-size: 85%;
 }
 
@@ -461,8 +467,6 @@ small, .small {
 .section-box > a:hover {
   text-decoration: none;
 }
-
-
 
 .name-hierarchy {
   width: 92%;
@@ -510,7 +514,6 @@ small, .small {
   margin-left: 80px;
 }
 
-
 .no-results > img {
   height: 400px;
 }
@@ -530,7 +533,7 @@ small, .small {
 .concept-names {
   text-align: left;
   font-size: 15px;
-  margin: 0 5px;;
+  margin: 0 5px;
 }
 
 .concept-group-title > h3 {
@@ -550,9 +553,8 @@ small, .small {
 .concept-ref {
   margin-left: 10px;
   font-size: 11px;
-  color: #777
+  color: #777;
 }
-
 
 .concept-group-attributes > p > strong {
   font-size: 14px;
@@ -611,7 +613,8 @@ small, .small {
   background-image: url(../img/noun_84286.png);
 }
 
-.patty, .hamburger {
+.patty,
+.hamburger {
   height: 15px;
   width: 15px;
   background-size: 20px;
@@ -638,27 +641,26 @@ small, .small {
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
-
 }
 .expand-toggle {
   height: 40px;
   width: 40px;
   border-radius: 25px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   position: absolute;
   bottom: 0;
   z-index: 2;
-  -moz-transition: all .2s ease-in;
-  -o-transition: all .2s ease-in;
-  -webkit-transition: all .2s ease-in;
-  transition: all .2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 .expand-toggle:hover {
-  background-color: #EAEAEA;
+  background-color: #eaeaea;
 }
 .expand-toggle.expanded {
-  background-color: #A6A6A6;
-  color: #FFFFFF;
+  background-color: #a6a6a6;
+  color: #ffffff;
 }
 .expand-toggle.expanded:hover {
   background-color: #999999;
@@ -676,44 +678,44 @@ small, .small {
 }
 
 .expand-menu {
-    margin-bottom: 45px;
-    z-index: 1;
-    -webkit-animation-duration: 0.65s;
-    -moz-animation-duration: 0.65s;
-    animation-duration: 0.65s;
+  margin-bottom: 45px;
+  z-index: 1;
+  -webkit-animation-duration: 0.65s;
+  -moz-animation-duration: 0.65s;
+  animation-duration: 0.65s;
 }
 .expand-menu-button {
-    height: 40px;
-    width: 40px;
-    border-radius: 35px;
-    background-color: #FFFFFF;
-    color: #000000;
-    margin-bottom: 5px;
-    -moz-transition: all .2s ease-in;
-    -o-transition: all .2s ease-in;
-    -webkit-transition: all .2s ease-in;
-    transition: all .2s ease-in;
+  height: 40px;
+  width: 40px;
+  border-radius: 35px;
+  background-color: #ffffff;
+  color: #000000;
+  margin-bottom: 5px;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
 
 .expand-menu-button:hover {
-  background-color: #EAEAEA;
+  background-color: #eaeaea;
 }
 .expand-menu-button.active {
-  background-color: #A6A6A6;
-  color: #FFFFFF;
+  background-color: #a6a6a6;
+  color: #ffffff;
   filter: invert(1);
   -webkit-filter: invert(1);
 }
 
 .open {
-    visibility: visible !important;
+  visibility: visible !important;
 }
 .closeMenu {
-    visibility: visible !important;
+  visibility: visible !important;
 }
 
 .preload * {
-  visibility:hidden !important;
+  visibility: hidden !important;
 }
 
 .chart-row {
@@ -745,18 +747,18 @@ small, .small {
 .prevalent-taxa > img {
   filter: invert(1);
   -webkit-filter: invert(1);
-  -ms-filter: 'progid:DXImageTransform.Microsoft.BasicImage(invert=1)';
+  -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(invert=1)";
   height: 35px;
 }
 .prevalent-taxa > p {
-  color: #F5F5F5;
+  color: #f5f5f5;
   font-size: 0.8em;
   font-weight: 200;
   margin-top: 5px;
 }
 
 #prevalent-taxa-title {
-  color: #F5F5F5;
+  color: #f5f5f5;
   font-size: 1.2em;
   margin-bottom: 0;
 }
@@ -772,7 +774,8 @@ small, .small {
   padding: 25px;
 }
 
-.def-page-title, .def-page-title > a {
+.def-page-title,
+.def-page-title > a {
   font-size: 30px;
   color: #aaa;
   font-weight: 100;
@@ -809,13 +812,12 @@ small, .small {
   color: #bbb;
 }
 
-
 .footer {
   background-color: #eeeeee;
   padding: 25px;
   display: flex;
   align-items: center;
-  justify-content: flex-start;;
+  justify-content: flex-start;
   width: 100%;
   margin-top: 120px;
 }
@@ -830,7 +832,8 @@ small, .small {
   font-family: "Maven Pro", sans-serif;
   font-size: 30px;
 }
-.footer-brand > a, .footer-brand > a:hover {
+.footer-brand > a,
+.footer-brand > a:hover {
   color: #000000;
   text-decoration: none;
 }
@@ -865,7 +868,7 @@ small, .small {
   height: 100%;
   width: 100%;
   position: absolute;
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 .loading-box {
   height: 100%;
@@ -976,7 +979,7 @@ small, .small {
 .filterMenu {
   position: absolute;
   z-index: 99999999;
-  background-color: rgba(255,255,255,0.93);
+  background-color: rgba(255, 255, 255, 0.93);
   color: #333;
   line-height: 23px;
   -webkit-transition: all 0.6s ease;
@@ -984,12 +987,12 @@ small, .small {
   -o-transition: all 0.6s ease;
   -ms-transition: all 0.6s ease;
   transition: all 0.6s ease;
-  transform: translate3d(0,0,0);
-  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
   -webkit-perspective: 1000;
   -webkit-backface-visibility: hidden;
 
-/*  width: -moz-calc(30% - 15px);
+  /*  width: -moz-calc(30% - 15px);
   width: -webkit-calc(30% - 15px);
   width: calc(30% - 15px);*/
   width: 250px;
@@ -1004,7 +1007,7 @@ small, .small {
 .filterMenu-tab {
   height: 65px;
   width: 20px;
-  background-color: rgba(255,255,255,0.93);
+  background-color: rgba(255, 255, 255, 0.93);
   position: absolute;
   top: 43%;
   left: 100%;
@@ -1061,7 +1064,7 @@ small, .small {
   right: 50px;
 }
 
-@media(max-width: 768px) {
+@media (max-width: 768px) {
   #exploreMap {
     margin-left: 0;
   }
@@ -1118,7 +1121,6 @@ small, .small {
 .mapbox-map {
   position: relative;
 }
-
 
 .mapbox-logo {
   position: absolute;
