Format codebase with prettier

--- a/packages/globe-dev/src/main.module.scss
+++ b/packages/globe-dev/src/main.module.scss
@@ -1,6 +1,5 @@
 @import "mapbox-gl/dist/mapbox-gl.css";
 
-
 html,
 body {
   margin: 0;
@@ -29,65 +28,66 @@ body {
     background-color: #fff;
     border-radius: 8px;
   }
-  
+
   .map-container {
     position: relative;
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: row;
-    gap: 0.5em
+    gap: 0.5em;
   }
-  
-  .cesium-panel, .map-panel {
+
+  .cesium-panel,
+  .map-panel {
     flex-grow: 1;
     position: relative;
     height: 100vh;
   }
-  
+
   .map-panel .map {
     height: 100%;
   }
-  
+
   .cesium-widget canvas {
     cursor: drag;
   }
-  
+
   div.caption {
     font-size: 0.8em;
     font-style: italic;
     color: #888;
     text-align: left;
   }
-  
+
   header {
     display: flex;
     flex-direction: column;
     align-items: right;
     padding: 0.5em;
-    gap: 0.5em
+    gap: 0.5em;
   }
-  
+
   h1 {
     margin: 0;
     font-size: 1em;
   }
-  
+
   header p {
     margin: 0.2em 0 0.3em;
     font-style: italic;
   }
-  
+
   .spacer {
     flex-grow: 1;
   }
-  
+
   ul.controls {
     list-style: none;
     padding-left: 0px;
-    margin: 0
+    margin: 0;
   }
-  
+
   a {
     display: block;
     cursor: pointer;
@@ -97,16 +97,14 @@ body {
     text-decoration: none;
     background-color: #eee;
   }
-  
+
   .controls li a.active {
     background-color: #a3d0fd;
   }
-  
+
   /* These styles make up for deficiencies in cesium-viewer */
   .mapbox-logo {
     display: block !important;
     margin-left: 8px;
   }
-
 }
-
