--- a/src/styles/_theme.styl
+++ b/src/styles/_theme.styl
@@ -25,6 +25,7 @@ $dark-text = $gray4
   --tertiary-border-color: $gray5
   --tertiary-color: $light-gray4
   --text-color: #333
+  --text-dim-color: #aaa
   --text-emphasized-color: #000
   --text-subtle-color: #444
   --translucent-panel-background-color: rgba(255,255,255,0.2)
@@ -53,6 +54,7 @@ body
     --tertiary-border-color: #5F6B7C // gray 5
     --tertiary-color: #383E47 // light gray 4
     --text-color: $dark-text
+    --text-dim-color: $dark-gray3
     --text-emphasized-color: #fff
     --text-subtle-color: $gray3
     --translucent-panel-background-color: alpha($dark-background, 0.6)
