--- a/packages/sift/src/css/styles.css
+++ b/packages/sift/src/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Maven+Pro&amp;text=macrostrat");
+
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
