Updated maps interface

--- a/src/styles/_theme.styl
+++ b/src/styles/_theme.styl
@@ -60,3 +60,12 @@ body
     --translucent-panel-background-color: alpha($dark-background, 0.6)
     --ui-color-accent-text: rgb(252, 217, 250)
     --ui-color-accent: darken(rgb(143, 39, 138), 50%)
+
+.secondary
+  color: var(--secondary-color)
+
+.tertiary
+  color: var(--tertiary-color)
+
+span.spacer
+  min-width: 1em
