Create some nice new components

--- a/src/components/cards/main.module.sass
+++ b/src/components/cards/main.module.sass
@@ -1,2 +1,15 @@
 .link-card
-  padding: 4px 10px
+  padding: 1em
+  margin: 1em 0
+  display: block
+  text-decoration: none
+  color: unset
+  &:hover
+    text-decoration: none
+    background-color: var(--accent-secondary-hover-color)
+  :first-child
+    margin-top: 0
+  :last-child
+    margin-bottom: 0
+
+
