Update map interface

--- a/src/pages/map/map-interface/map-page/main.module.styl
+++ b/src/pages/map/map-interface/map-page/main.module.styl
@@ -128,6 +128,7 @@ This stylesheet the overall application page layout.
   to handle a two-column layout. */
 @media screen and (min-width: 768px)
   .macrostrat-map-container
+    --map-context-stack-width: 18em
     &.context-open
       --map-context-stack-width: 34em
     &.searching
