Updated stratigraphic names component

--- a/src/layouts/main.module.sass
+++ b/src/layouts/main.module.sass
@@ -1,6 +1,8 @@
 
 .content-page
-  margin: 1em 4em 3em
+  margin: 1em auto 3em
+  max-width: 78em
+  padding: 0 4em
 
   .centered
     min-height: 100vh
