Basic interface for viewing relationships

--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -3,6 +3,14 @@
 .float-right
   float: right
 
+.flex
+  display: flex
+  gap: 1em
+
+  &.row
+    flex-direction: row
+    align-items: baseline
+
 .stick-to-top
   position: sticky
   top: 0
