Starting to finalize a bit more

--- a/src/pages/lex/strat-names/@id/main.module.sass
+++ b/src/pages/lex/strat-names/@id/main.module.sass
@@ -1,3 +1,9 @@
 .reference
   background-color: var(--panel-secondary-background-color)
   padding: 0.5em 1em
+
+.source-info
+  padding-bottom: 0.5em
+
+.relationship-item
+  margin-bottom: 2em
