Started on filters

--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -11,6 +11,9 @@
     flex-direction: row
     align-items: baseline
 
+  &.align-center
+    align-items: center
+
   .spacer
     flex-grow: 1
 
@@ -26,3 +29,6 @@
 
 .padding
   padding: 1em
+
+.fade-to-top
+  background: linear-gradient(var(--background-color), rgba(255, 255, 255, 0))
