Fixed column rendering on most pages

--- a/src/pages/columns/@column/column-inspector/column-inspector.module.styl
+++ b/src/pages/columns/@column/column-inspector/column-inspector.module.styl
@@ -25,6 +25,10 @@
   margin 0 4em 4em
   padding 0
 
+.column-header
+  margin-left: 2em
+  margin-right: 2em
+
 .column-nav
   position sticky
   top 2.2em
