Add Lines and Points

--- a/src/pages/maps/ingestion/@id/main.module.sass
+++ b/src/pages/maps/ingestion/@id/main.module.sass
@@ -35,3 +35,16 @@ body
   height: 1em
   display: inline-block
   margin-right: 0.5em
+
+.edit-menu
+    display: flex
+    flex-direction: column
+
+.m-0
+  margin: 0
+
+.pb-1
+  padding-bottom: 1rem
+
+.edit-page-header
+  padding-bottom: 1rem
