Started reworking dark mode styling

--- a/src/pages/maps/ingestion/@id/components/cell/main.module.sass
+++ b/src/pages/maps/ingestion/@id/components/cell/main.module.sass
@@ -12,7 +12,7 @@
 .data-sheet
   height: 100%
 
-:global(.bp4-dark) .data-sheet :global(.bp4-table-quadrant)
+:global(.bp4-dark) :global(.bp4-table-cell)
   background-color: $dark-gray1
 
 .input-cell
@@ -56,7 +56,6 @@
 
 
 .editable-cell
-  background-color: white
   height: 18px
   padding: 1.7px 8px
   font-size: 12px
