--- a/src/layouts/main.module.sass
+++ b/src/layouts/main.module.sass
@@ -1,4 +1,11 @@
 
+.fit-viewport
+  position: fixed
+  width: 100vw
+  height: 100vh
+  top: 0
+  left: 0
+
 .content-page
   margin: 1em auto 3em
   max-width: 78em
@@ -14,4 +21,6 @@
   max-width: 60em
   padding: 0 4em
 
-
+.fullscreen-page
+  margin: 1em auto 3em
+  padding: 0 4em
