Update basic data sheet files

--- a/src/pages/maps/@id/legend/main.module.sass
+++ b/src/pages/maps/@id/legend/main.module.sass
@@ -14,3 +14,12 @@
   flex: 1
   position: relative
   min-height: 0
+
+.lithology
+  font-weight: bold
+  display: inline-block
+  padding: 0 0.5em
+  border-radius: 0.5em
+
+.inline-lithology .lithology
+  line-height: 1.2em
