--- a/src/pages/maps/@id/legend/main.module.sass
+++ b/src/pages/maps/@id/legend/main.module.sass
@@ -23,3 +23,18 @@
 
 .inline-lithology .lithology
   line-height: 1.2em
+
+.basis-panel
+  padding: 1em
+
+.description
+  font-style: italic
+
+.tag-header
+  font-weight: bold
+  text-transform: small-caps
+  font-size: 0.8em
+  color: var(--secondary-color)
+
+.basis-col
+  max-width: 15em
