Added max-height styles

--- a/src/pages/maps/@id/legend/main.module.sass
+++ b/src/pages/maps/@id/legend/main.module.sass
@@ -39,6 +39,9 @@
 .basis-panel, .long-text
   max-width: 20em
   padding: 8px
+  max-height: 30em
+  overflow-y: scroll
+  pointer-events: all
 
 .description
   font-style: italic
