Updated legend entries, partially

--- a/src/components/lithology/main.module.sass
+++ b/src/components/lithology/main.module.sass
@@ -3,7 +3,8 @@
   margin: 4px
   min-width: 8em
 
-
+  &>:last-child
+    margin-bottom: 0
 
   .header
     display: flex
@@ -16,7 +17,9 @@
       &::before
         content: '#'
 
-
-
 .lithology-tag-popover-holder
   cursor: pointer
+
+.tight-list
+  padding-left: 1em
+
