Adjust lithology tags"

--- a/src/components/lithology/main.module.sass
+++ b/src/components/lithology/main.module.sass
@@ -11,11 +11,12 @@
     flex-direction: row
     justify-content: space-between
     align-items: baseline
-    gap: 1em
-    code
-      color: var(--secondary-color)
-      &::before
-        content: '#'
+
+.lithology-id
+  color: var(--secondary-color)
+  &::before
+    content: '#'
+  padding-left: 0.5em
 
 .lithology-tag-popover-holder
   cursor: pointer
@@ -23,3 +24,18 @@
 .tight-list
   padding-left: 1em
 
+
+.lithology-tag
+  margin: 0.2em 0.5em 0.3em 0
+  span, code
+    display: inline-block
+
+  .lithology-id
+    width: 0
+    overflow: hidden
+    white-space: nowrap
+    transition: width 0.3s
+
+  &:hover
+    .lithology-id
+      width: 100%
