--- a/src/pages/maps/main.module.scss
+++ b/src/pages/maps/main.module.scss
@@ -21,3 +21,12 @@
   min-width: 3em;
   display: inline-block;
 }
+
+.nav-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  li {
+    padding: 0.5em 0;
+  }
+}
